tests/NormalTests/paczka1/small_fuzzy/56504784.err
Error in line 1: g2GM A40% 43,6
Error in line 6: GDx6HGlV A401 42,1
Error in line 2: S673 S673 6,4
Error in line 11: 6r0ANVS2 A9 81,4
Error in line 14: g2GM A401 10,2
